Issue 12368: **Changing tabs does not cause chart update after textbox change Issue 12581: **JavaScript exception when clicking on well-level exclusion UI if description is blank Other Luminex exclusion UI changes/fixes: - add text to run exclusion popup explaining overlapping exclusions - anchor comment textfield width to 100% - add padding to window header table cells

--- a/luminex/webapp/Exclusion.css
+++ b/luminex/webapp/Exclusion.css
@@ -2,10 +2,12 @@
     background: #eeeeee;
     font-weight: bold;
     border: solid #c0c0c0 1px;
-    width: 25%
+    width: 25%;
+    padding: 3px !important;
 }
 
 .labkey-exclusion-td-cell {
     background: #ffffff;
-    border: solid #c0c0c0 1px
+    border: solid #c0c0c0 1px;
+    padding: 3px !important;
 }
